# incubator-teaclave-sgx-sdk

./: rust-toolchain
samplecode/localattestation/app/: App.cpp
samplecode/localattestation/enclave1/src/: lib.rs
samplecode/remoteattestation/GoogleMessages/: Messages.pb.cc  Messages.pb.h
samplecode/remoteattestation/Util/: UtilityFunctions.h
samplecode/spectre/: Makefile
samplecode/spectre/app/: Cargo.toml
samplecode/spectre/app/src/: main.rs
samplecode/spectre/enclave1/: Cargo.toml  Enclave1.config.xml  Enclave1.edl  Makefile
samplecode/spectre/enclave1/src/: lib.rs
sgx_alloc/src/: system.rs
sgx_tstd/src/: error.rs
sgx_tstd/src/io/: error.rs
sgx_tstd/src/prelude/: v1.rs
sgx_unwind/libunwind/src/mi/: dyn-info-list.c
