[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
minidow = { path = "/home/nightmared/dev/minidown", default-features = false, features= ["tester", "std"] }
capstone = "0.7"
capstone-sys = "0.11"
goblin = "0.3"
nix = "0.20"
libc = "0.2"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

