[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
minidow = { git = "https://github.com/nightmared/minidow.git", default-features = false, features= ["tester"] }
capstone = "0.7"
capstone-sys = "0.11"
goblin = "0.3"
nix = "0.20"
libc = "0.2"
aes-gcm = "0.8.0"
termcolor = "1.1.2"

[features]
default = ["multithread"]
multithread = ["minidow/threading"]

[profile.release]
lto = true

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

